--- a/serverless.yml
+++ b/serverless.yml
@@ -10,9 +10,9 @@
 #    docs.serverless.com
 #
 # Happy Coding!
-service: my-first-service
+service: rami-levi-available-slots
 # app and org for use with dashboard.serverless.com
-app: my-first-app
+app: rami-levi
 org: chenop
 
 # You can pin your service to only deploy with a specific Serverless version
@@ -60,13 +60,10 @@ outputs:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  ramiLevi:
+    handler: ramiLevi.run
     events:
-      - http:
-          path: hello
-          method: get
-          cors: true
+      - schedule: rate(1 minutes)
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
