--- a/serverless.yml
+++ b/serverless.yml
@@ -12,7 +12,7 @@
 # Happy Coding!
 service: rami-levi-available-slots
 # app and org for use with dashboard.serverless.com
-app: rami-levi
+app: ramilevi
 org: chenop
 
 # You can pin your service to only deploy with a specific Serverless version
@@ -63,7 +63,7 @@ functions:
   ramiLevi:
     handler: ramiLevi.run
     events:
-      - schedule: rate(1 minutes)
+      - schedule: rate(2 minutes)
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
