--- a/serverless.yml
+++ b/serverless.yml
@@ -65,7 +65,7 @@ functions:
   ramiLevi:
     handler: ramiLevi.run
     events:
-      - schedule: rate(10 seconds)
+      - schedule: rate(1 minute)
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
